# snu-forecasting-lecture-TA

./: .env.example  .gitignore  pyproject.toml
app/: api.py  config.py  forecast.py  run.py  server.py
database/: target_history.csv
datasets/: exchange.csv  kospi.csv
practices/: practice1_.html  practice2_.html  practice2_2.html  practice2_2.ipynb  practice5_1.ipynb
